--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,10 +5,11 @@ main {
   height: 80vh;
 }
 
-* {
-  margin: 0;
+.product-heading {
+  text-decoration: none;
+  font-size: 20px;
 }
 
-a {
-  text-decoration: none;
+.product-heading:hover {
+  text-decoration: underline;
 }
