--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,3 +24,28 @@ p {
 .product-heading:hover {
   text-decoration: underline;
 }
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: white;
+}
+
+.carousel-item {
+  text-align: center;
+}
+.carousel img {
+  height: 300px;
+  padding: 30px;
+  margin: 60px 40px 40px 40px;
+  border-radius: 50%;
+}
